<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">华凤凰</string>


    <!--登陆部分-->
    <string name="string_edit_login_name">请输入手机号</string>
    <string name="string_edit_login_password">请输入密码</string>
    <string name="string_button_login">登录</string>
    <string name="string_text_login">注册 </string>
    <string name="string_text_password">忘记密码？</string>
    <string name="string_text_title">第三方账户登录</string>
    <!--注册部分-->
    <string name="string_text_regedit_title">注册</string>
    <string name="string_edit_regedit_name">请输入手机号</string>
    <string name="string_edit_regedit_password">请输入6-12位数字/字母的密码</string>
    <string name="string_edit_regedit_nickname">请输入推荐人邀请码（选填）</string>
    <string name="string_edit_regedit_yanzhengma">请输入验证码</string>
    <string name="string_text_regedit_yanzhengma">获取验证码</string>
    <string name="string_text_regedit_xieyi">注册即代表同意《在线服务协议》</string>
    <string name="string_btn_sure">确认</string>
    <!--reminder 提示信息-->
    <string name="string_reminder_phone_null">请输入手机号</string>
    <string name="string_reminder_password_null">请输入密码</string>
    <string name="string_reminder_phone">手机号格式不正确</string>
    <string name="string_reminder_password">密码格式不正确</string>
    <string name="string_reminder_yan_load">正在获取验证码</string>
    <string name="string_reminder_yan">验证码已发送</string>
    <string name="string_reminder_yan_null">验证码不能为空</string>
    <string name="string_reminder_yan_error">验证码错误</string>
    <string name="string_clear_message">是否清空缓存?</string>
    <string name="string_clear_sure">确定</string>
    <string name="string_clear_cancle">取消</string>
    <string name="string_login_xiyi">登录表示您同意“用户协议”和“隐私协议”</string>
    <string name="string_register_xiyi">注册表示您同意“用户协议”和“隐私协议”</string>

    <!--忘记密码部分-->
    <string name="string_text_forget_title">忘记密码</string>
    <string name="string_edit_regedit_pgone">请输入绑定手机号</string>
    <string name="string_edit_forget_password">请输入密码</string>
    <string name="string_btn_forget">提交</string>
    <!--绑定手机号部分-->
    <string name="string_text_bangding_title">绑定手机号</string>
    <string name="string_btn_bangding">确认绑定</string>
    <string name="string_text_bangding">为保障您的账户安全及个人权益，请绑定您的手机号</string>


    <!--版本升级-->
    <string name="dialog_exit_account_message">确定要立即退出当前账号,亲?</string>
    <string name="dialog_btn_sure">退出</string>
    <string name="choose_photo_cancel">取消</string>
    <string name="choose_photo_know">我知道了</string>
    <string name="update_button_hint">升级提示</string>
    <string name="is_update_button_message">当前已是最新版本</string>
    <string name="update_button_message">版本过低，需要升级到最新版本</string>
    <string name="update_button_new">现在升级</string>
    <string name="choose_photo_ignore">暂不升级</string>
    <string name="update_title">发现新版本</string>
    <string name="update_button">立即更新</string>
    <string name="update_message">发现新版本\n版本已更新至</string>
    <string name="text_message_exit">确定立即退出当前账号?</string>
    <string name="long_save">图片保存到相册</string>
    <!--我的页面-->
    <string name="text_tuandui">团队</string>
    <string name="text_zhanghu">账户</string>
    <string name="text_yaoqing">邀请</string>
    <string name="text_yaoqingma">我的邀请码</string>
    <string name="text_vip">成为VIP，课程全年免费听</string>
    <string name="text_sucai">素材转发</string>
    <string name="text_activity">精彩活动</string>
    <string name="text_dingdan">我的订单</string>
    <string name="text_shouchang">我的收藏</string>
    <string name="text_fankui">建议反馈</string>

    <!--设置-->
    <string name="text_setting_title">设置</string>
    <string name="text_setting_liuliang">允许使用本地流量观看</string>
    <string name="text_setting_safe">账号与安全</string>
    <string name="text_setting_about">关于我们</string>
    <string name="text_setting_clear">清除缓存</string>
    <string name="text_setting_version">当前版本</string>
    <string name="text_setting_getout">退出登录</string>
    <string name="save_image2album">图片已保存至相册</string>
    <string name="save">确定</string>
    <string name="call">呼叫</string>
    <!--账号与安全-->
    <string name="text_safe_title">账号与安全</string>
    <string name="text_safe_phone">手机号</string>
    <string name="text_safe_wx">微信</string>
    <string name="text_safe_qq">QQ</string>
    <string name="text_safe_password">修改密码</string>
    <string name="text_safe_bangding">已绑定</string>
    <string name="text_safe_wei">未绑定</string>
    <string name="text_safe_jiechu">解除绑定</string>
    <string name="string_bang_no_safe">解除绑定</string>
    <!--修改手机号-->
    <string name="text_phone_title">修改手机号</string>
    <string name="text_phone_new">请输入新号码</string>
    <string name="string_btn_next">下一步</string>
    <string name="string_btn_finish">完成</string>
    <!--修改密码-->
    <string name="string_paasword_title">修改密码</string>
    <string name="string_paasword_yanzhengma">验证码</string>
    <string name="string_paasword_sure">确认密码</string>
    <!--关于我们-->
    <string name="text_about_title">关于我们</string>
    <string name="text_about_xieyi">用户协议</string>
    <string name="text_about_dianhua">联系电话</string>
    <string name="text_about_suggest">请输入您的意见反馈内容（200字以内）</string>
    <string name="text_suggest_title">建议反馈</string>
    <string name="text_btn_suggest">提交反馈</string>
    <string name="text_xieyi_title">用户协议</string>
    <string name="text_btn_suggest_success">反馈成功</string>
    <string name="text_suggest_content">请填写反馈信息</string>
    <!--个人信息-->
    <string name="text_info_title">个人信息</string>
    <string name="text_info_nick">昵称</string>
    <string name="text_info_birthday">生日</string>
    <string name="text_info_phone">手机号</string>
    <string name="text_info_in">推荐人</string>
    <string name="text_info_address">地区</string>
    <!--修改昵称-->
    <string name="text_nick_title">修改昵称</string>
    <string name="text_nick_save">保存</string>
    <!--邀请好友-->
    <string name="text_invitate_title">邀请好友</string>
    <string name="text_invitate_save">长按保存图片至相册</string>
    <!--消息通知-->
    <string name="text_message_title">消息通知</string>
    <string name="text_message_edit">编辑</string>
    <string name="text_message_cancle">取消</string>
    <string name="text_message_message">确认被删除吗</string>
    <!--我的订单-->
    <string name="text_order_title">我的订单</string>
    <string name="text_order_num">订单编号</string>
    <!--我的团队-->
    <string name="text_team_title">我的团队</string>
    <string name="text_team_num">团队人数</string>
    <string name="text_team_yiyong">已用名额 ：</string>
    <string name="text_team_weiyong">未用名额 ：</string>
    <string name="text_team_huiyuan">我的会员</string>
    <string name="text_team_hehuoren">我的合伙人</string>
    <string name="text_team_fen">我的分公司</string>
    <string name="text_team_zong">间接分公司</string>
    <!--我的会员-->
    <string name="text_member_title">我的会员</string>
    <string name="text_member_tuandui">团队人数：</string>
    <string name="text_member_yigou">已购VIP数：</string>
    <string name="app_exit_hint">再按一次退出登录</string>
    <string name="loading_user_info">正在加载用户信息&#8230;</string>
    <string name="text_senfen_daiyanren">推广代言人</string>
    <string name="text_senfen_zhuce">注册用户</string>
    <string name="text_senfen_hehuoren">合伙人</string>
    <string name="text_senfen_fengongsi">分公司</string>
    <string name="text_senfen_daosi">合作导师</string>

    <!--底部相册弹窗-->
    <string name="portrait_photo">拍照</string>
    <string name="portrait_camera">从手机相册选择</string>

    <!-- 首页-->
    <string name="home_home">首页</string>
    <string name="home_course">课程</string>
    <string name="home_me">我的</string>
    <string name="hot_video">热门视频</string>
    <string name="view_more">查看更多</string>
    <string name="latest_works">最新作品</string>


    <!-- 课程详情 -->
    <string name="comment_hint">说点什么呢？</string>
    <string name="vip_hint">成为VIP，课程全年免费听</string>
    <string name="buy">购买</string>
    <string name="free">免费</string>
    <string name="introduce">介绍</string>
    <string name="catalog">目录</string>
    <string name="image_text">图文</string>
    <string name="offline_course">线下课程</string>
    <string name="immediately_apply">立即报名</string>
    <string name="name">姓名</string>
    <string name="phone">手机号</string>
    <string name="profession">职业</string>
    <string name="area">地区</string>
    <string name="date">日期</string>
    <string name="name_hint">请输入姓名</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="correntphone_hint">请输入正确的手机号</string>
    <string name="profession_hint">请输入您的职业(选填)</string>
    <string name="area_hint">请选择报名地区</string>
    <string name="date_hint">请选择参加课程日期</string>
    <string name="apply_price">报名费用</string>
    <string name="pay_balance">余额支付</string>
    <string name="pay_weixin">微信支付</string>
    <string name="pay_zhifubao">支付宝</string>
    <string name="pay">支付</string>
    <string name="course_comment">课程评论</string>
    <string name="dredge_account">开通账户</string>
    <string name="member_indate">会员有效期</string>
    <string name="price">金额</string>
    <string name="pay_apple">苹果支付</string>
    <string name="vip_member">VIP会员权益</string>
    <string name="equity">1、开通vip享受所有课程免费观看；\n2、每个账户每月累计可观看1000+视频；\n3、具体规则请查看常见问题说明。</string>
    <string name="course_vip">VIP免费</string>
    <string name="course_free">免费课程</string>
    <string name="course_hot">热门推荐</string>
    <string name="cut_video">切换视频</string>
    <string name="reply">回复</string>
    <string name="send">发送</string>
    <string name="course">课程</string>
    <string name="buy_course">购买课程</string>
    <string name="course_name">课程名称</string>
    <string name="confirm_purchase">确认购买</string>
    <string name="confirm_open">确认开通</string>
    <string name="immediately_renewal">立即续费</string>
    <string name="current_balance">当前余额</string>
    <string name="open_vip">开通VIP</string>
    <string name="all">全部</string>
    <string name="all_comment">全部评论</string>
    <string name="reply_count">条回复</string>
    <string name="apply_success">恭喜您报名成功！</string>
    <string name="apply_success_title">报名成功</string>
    <string name="balance_insufficient">余额不足</string>
    <string name="yuan">元</string>
    <string name="year">年</string>
    <string name="video_open_toast">本节无音/视频</string>
    <string name="video_open_buy_toast">购买后才能观看</string>
    <string name="activity_end">活动已经结束</string>
    <string name="play_num">&#160;播放量</string>
    <string name="success_openvip">开通VIP成功</string>
    <string name="success_course">购买成功</string>
    <string name="no_data">暂无内容</string>

    <!--错误提示-->
    <string name="load_no_more">已经到底了</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有网络</string>
    <string name="detection_network">请检测网络设置</string>
    <string name="error_view_no_data">暂时没有数据</string>

    <!--shareSdk-->
    <string name="text_shre_error">授权失败</string>
    <string name="text_shre_success">授权成功</string>

    <string name="poster_learn">正在华凤凰APP学习</string>
    <string name="poster_check">识别二维码学免费好课程吧</string>
</resources>
