<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        layout="@layout/toolbar"/>
    <com.primecloud.huafenghuang.widget.SettingBar
        android:id="@+id/sb_safe_phone"
        style="@style/SettingBarStyle"
        app:bar_leftText="@string/text_safe_phone"
        app:bar_rightIcon="@mipmap/arrow"
        />
    <com.primecloud.huafenghuang.widget.SettingBar
        android:id="@+id/sb_safe_weixin"
        style="@style/SettingBarStyle"
        app:bar_leftText="@string/text_safe_wx"
        app:bar_rightIcon="@mipmap/arrow"
        app:bar_rightText="@string/text_safe_wei"
        />
    <com.primecloud.huafenghuang.widget.SettingBar
        android:id="@+id/sb_safe_qq"
        style="@style/SettingBarStyle"
        app:bar_leftText="@string/text_safe_qq"
        app:bar_rightIcon="@mipmap/arrow"
        app:bar_rightText="@string/text_safe_wei"
        app:bar_lineVisible="false"
        />
    <View
        style="@style/VerticalLine10Style"/>
    <com.primecloud.huafenghuang.widget.SettingBar
        android:id="@+id/sb_safe_password"
        style="@style/SettingBarStyle"
        app:bar_leftText="@string/text_safe_password"
        app:bar_rightIcon="@mipmap/arrow"
        />

</LinearLayout>