<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.primecloud.huafenghuang.ui.user.BangDingActivity">
    <include
        layout="@layout/toolbar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50"
        android:background="@color/text_pink"
        android:padding="@dimen/space_14"
        android:textColor="@color/text_color_red"
        android:text="@string/string_text_bangding"/>
    <EditText
        style="@style/edit_style"
        android:drawableLeft="@mipmap/ic_phone"
        android:hint="@string/string_edit_regedit_name"
        android:id="@+id/bangding_phone"
        android:singleLine="true"
        android:inputType="phone|number"
        android:maxLength="11"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/space_40"
        android:layout_marginLeft="@dimen/space_40"
        android:layout_marginTop="@dimen/space_20"
        android:background="@drawable/shape_edit_bottom"
        android:paddingBottom="@dimen/space_13"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_yanzhengma"
            android:drawablePadding="@dimen/space_13"
            android:textSize="@dimen/text_13"
            android:hint="@string/string_edit_regedit_yanzhengma"
            android:id="@+id/bangding_yanzhengma"
            android:background="@null"
            android:singleLine="true"
            android:padding="@dimen/space_10"
            android:textColor="@color/captcah_text_color"
            android:inputType="phone|number"
            />
        <View
            style="@style/VerticalLineStyle"
            android:layout_marginBottom="@dimen/space_5"
            android:layout_marginTop="@dimen/space_5"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="@dimen/space_10"/>
        <com.primecloud.huafenghuang.widget.CountdownView
            android:id="@+id/tv_check_number_bangding"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/string_text_regedit_yanzhengma"
            android:textColor="@color/text_color_red"
            android:layout_marginRight="@dimen/space_5"/>
    </LinearLayout>
    <EditText
        style="@style/edit_style"
        android:drawableLeft="@mipmap/ic_password"
        android:hint="@string/string_edit_regedit_password"
        android:id="@+id/bangding_password"
        android:singleLine="true"
        android:password="true"
        />
    <EditText
        style="@style/edit_style"
        android:drawableLeft="@mipmap/ic_yaoqing"
        android:hint="@string/string_edit_regedit_nickname"
        android:id="@+id/bangding_yaoqing"
        android:singleLine="true"
        android:layout_marginTop="@dimen/space_20"
        />
    <Button
        style="@style/button_style"
        android:text="@string/string_btn_bangding"
        android:id="@+id/btn_bangding"
        />

</LinearLayout>
