<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        layout="@layout/toolbar"/>
    <EditText
        style="@style/edit_style"
        android:drawableLeft="@mipmap/ic_phone"
        android:hint="@string/string_edit_regedit_name"
        android:id="@+id/change_phone1"
        android:singleLine="true"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/space_40"
        android:layout_marginLeft="@dimen/space_40"
        android:layout_marginTop="@dimen/space_30"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_yanzhengma"
            android:drawablePadding="@dimen/space_13"
            android:textSize="@dimen/text_13"
            android:hint="@string/string_edit_regedit_yanzhengma"
            android:id="@+id/change_yanzhengma"
            android:background="@null"
            android:drawableBottom="@drawable/shape_edit"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/tv_check_number_change"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textColor="@color/orange_sh"
            style="@style/text_yanzhengma_style"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/string_text_regedit_yanzhengma"
            android:layout_marginLeft="@dimen/space_5"
            android:visibility="visible" />
    </LinearLayout>
    <Button
        style="@style/button_style"
        android:text="@string/string_btn_next"
        android:id="@+id/btn_next"
        />
</LinearLayout>