<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.primecloud.huafenghuang.ui.user.RegisterActivity"
    android:orientation="vertical"
    android:background="@color/white">
    <include
        layout="@layout/toolbar"/>
    <EditText
        style="@style/edit_style"
        android:drawableLeft="@mipmap/ic_phone"
        android:hint="@string/string_edit_regedit_name"
        android:id="@+id/register_phone"
        android:singleLine="true"
        android:inputType="phone|number"
        android:maxLength="11"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/space_40"
        android:layout_marginLeft="@dimen/space_40"
        android:layout_marginTop="@dimen/space_20"
        android:background="@drawable/shape_edit_bottom"
        android:paddingBottom="@dimen/space_13"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_yanzhengma"
            android:drawablePadding="@dimen/space_13"
            android:textSize="@dimen/text_13"
            android:hint="@string/string_edit_regedit_yanzhengma"
            android:id="@+id/register_yanzhengma"
            android:background="@null"
            android:singleLine="true"
            android:padding="@dimen/space_10"
            android:textColor="@color/captcah_text_color"
            android:inputType="phone|number"
            />
        <View
            style="@style/VerticalLineStyle"
            android:layout_marginBottom="@dimen/space_5"
            android:layout_marginTop="@dimen/space_5"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="@dimen/space_10"/>
        <com.primecloud.huafenghuang.widget.CountdownView
            android:id="@+id/cv_password_forget_countdown"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/string_text_regedit_yanzhengma"
            android:textColor="@color/text_color_red"
            android:layout_marginRight="@dimen/space_5"/>
    </LinearLayout>
    <EditText
        style="@style/edit_style"
        android:drawableLeft="@mipmap/ic_password"
        android:hint="@string/string_edit_regedit_password"
        android:id="@+id/register_password"
        android:singleLine="true"
        android:password="true"
        />
    <EditText
        style="@style/edit_style"
        android:drawableLeft="@mipmap/ic_yaoqing"
        android:hint="@string/string_edit_regedit_nickname"
        android:id="@+id/register_yaoqing"
        android:singleLine="true"
        />

    <Button
        style="@style/button_style"
        android:text="@string/string_text_regedit_title"
        android:id="@+id/btn_register"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/space_40"
        android:layout_marginRight="@dimen/space_40"
        android:layout_marginTop="@dimen/space_10"
        >
        <TextView
            android:id="@+id/register_xiyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/space_10"
            android:textColor="@color/textcolor_xiyi"
            android:layout_gravity="center_vertical"
            android:text="@string/string_register_xiyi"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_40"
        android:text="@string/string_text_title"
        android:drawablePadding="@dimen/space_10"
        android:drawableLeft="@drawable/shape_edit_shellow"
        android:drawableRight="@drawable/shape_edit_shellow"
        android:textSize="@dimen/text_13" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_25">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_40"
            android:layout_marginRight="@dimen/space_40"
            android:src="@mipmap/ic_wechat"
            android:id="@+id/img_register_wechat"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_40"
            android:layout_marginRight="@dimen/space_40"
            android:src="@mipmap/ic_qq"
            android:id="@+id/img_register_qq"/>
    </LinearLayout>

</LinearLayout>
